--- a/config-SAMPLE.json
+++ b/config-SAMPLE.json
@@ -33,7 +33,7 @@
     "important-processes":
     {
       "enabled": true,
-      "command": "pgrep -af '^dpkg\\b|^pacman\\b|^dar\\s|^/\\S*rsync\\b|^ssh\\s|^unison\\S*'",
+      "command": "pgrep -af '^dpkg\\b|^pacman\\b|^dar\\s|^/\\S*rsync\\b|^ssh(d:)?\\s|^unison\\S*'",
 
       "tasks": {
         "sleep": true
